bin_PROGRAMS = metamath

noinst_HEADERS = \
	mmcmdl.h \
	mmcmds.h \
	mmdata.h \
	mmhlpa.h \
	mmhlpb.h \
	mminou.h \
	mmmaci.h \
	mmpars.h \
	mmpfas.h \
	mmunif.h \
	mmutil.h \
	mmveri.h \
	mmvstr.h \
	mmword.h \
	mmwtex.h

metamath_SOURCES = \
	metamath.c \
	mmcmdl.c \
	mmcmds.c \
	mmdata.c \
	mmhlpa.c \
	mmhlpb.c \
	mminou.c \
	mmmaci.c \
	mmpars.c \
	mmpfas.c \
	mmunif.c \
	mmutil.c \
	mmveri.c \
	mmvstr.c \
	mmword.c \
	mmwtex.c \
	$(noinst_HEADERS)

dist_pkgdata_DATA = \
	big-unifier.mm \
	demo0.mm \
	miu.mm \
	peano.mm \
	ql.mm \
	set.mm


EXTRA_DIST = \
	LICENSE.TXT \
	README.TXT \
	__README.TXT


