bin_PROGRAMS = metamath

noinst_HEADERS = \
	mmcmdl.h \
	mmcmds.h \
	mmdata.h \
	mmhlpa.h \
	mmhlpb.h \
	mminou.h \
	mmmaci.h \
	mmpars.h \
	mmpfas.h \
	mmunif.h \
	mmutil.h \
	mmveri.h \
	mmvstr.h \
	mmword.h \
	mmwtex.h \
	mmhtbl.h \
	mmwsts.h

metamath_SOURCES = \
	metamath.c \
	mmcmdl.c \
	mmcmds.c \
	mmdata.c \
	mmhlpa.c \
	mmhlpb.c \
	mminou.c \
	mmmaci.c \
	mmpars.c \
	mmpfas.c \
	mmunif.c \
	mmutil.c \
	mmveri.c \
	mmvstr.c \
	mmword.c \
	mmwtex.c \
	mmhtbl.c \
	mmwsts.c \
	$(noinst_HEADERS)


EXTRA_DIST = \
	LICENSE.TXT \
	README.TXT \
	__README.TXT

man_MANS = metamath.1
