# This file is input to automake, that expands this high-level make description
# to a Makefile containing the usual goals, and being capable of handling
# portability issues.

SUBDIRS = src

# the following files are not used during build, but are distributed to users
EXTRA_DIST = \
	LICENSE.TXT \
	README.TXT
